Fixing visual text overflow

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -112,6 +112,8 @@ p {
 }
 #menu p {
   width: 60%;
+  min-width: 350px;
+  max-width: 800px;
   text-align: right;
   margin: auto;
   color: rgb(218, 218, 218);
